# ChangeLog for games-server/crossfire-server
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/games-server/crossfire-server/ChangeLog,v 1.32 2015/02/19 03:17:38 mr_bones_ Exp $

*crossfire-server-1.71.0 (19 Feb 2015)

  19 Feb 2015; Michael Sterrett <mr_bones_@gentoo.org>
  +crossfire-server-1.71.0.ebuild:
  version bump

  28 Aug 2014; Michael Sterrett <mr_bones_@gentoo.org>
  -crossfire-server-1.60.0.ebuild, -files/crossfire-server-1.60.0-curl.patch:
  old

  14 Feb 2013; Agostino Sarubbo <ago@gentoo.org> crossfire-server-1.70.0.ebuild:
  Stable for ppc, wrt bug #457118

  14 Feb 2013; Agostino Sarubbo <ago@gentoo.org> crossfire-server-1.70.0.ebuild:
  Stable for x86, wrt bug #457118

  14 Feb 2013; Agostino Sarubbo <ago@gentoo.org> crossfire-server-1.70.0.ebuild:
  Stable for amd64, wrt bug #457118

*crossfire-server-1.70.0 (10 Jan 2013)

  10 Jan 2013; Michael Sterrett <mr_bones_@gentoo.org>
  +crossfire-server-1.70.0.ebuild, -files/crossfire-server-1.11.0-curl.patch,
  -files/crossfire-server-1.11.0-libpng15.patch:
  version bump (bug #410219)

  30 May 2012; Michael Sterrett <mr_bones_@gentoo.org>
  -crossfire-server-1.11.0.ebuild:
  old

  29 May 2012; Brent Baude <ranger@gentoo.org> crossfire-server-1.60.0.ebuild:
  Marking crossfire-server-1.60.0 ppc for bug 412669

  21 May 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  crossfire-server-1.60.0.ebuild:
  x86 stable wrt bug #412669

  05 May 2012; Mike Frysinger <vapier@gentoo.org>
  crossfire-server-1.60.0.ebuild:
  Drop unused autotools.eclass inherit.

  26 Apr 2012; Agostino Sarubbo <ago@gentoo.org>
  crossfire-server-1.60.0.ebuild:
  Stable for amd64, wrt bug #412669

  23 Apr 2012; Michael Sterrett <mr_bones_@gentoo.org>
  crossfire-server-1.60.0.ebuild:
  restrict tests since they try to read the installed location for datafiles
  (bug #413109)

*crossfire-server-1.60.0 (12 Mar 2012)

  12 Mar 2012; Michael Sterrett <mr_bones_@gentoo.org>