@@ -4,6 +4,6 @@ DIST crossfire-1.71.0.arch.tar.bz2 3462161 SHA256 016ee33b15879a96e14932a9209d03
 DIST crossfire-1.71.0.maps.tar.bz2 19463076 SHA256 f6df5fd605dd3b83dce1aa730390443b09569e6fae93bef058cd8f52fedc17da SHA512 c3940b0a48f1badc14eb81610cfcd4241d140b666b5cb123845dca6ad742a18977ad7ada1d75d738f15f44374896c4dd6047989122257d7cd87362a3af0f97e8 WHIRLPOOL 5ea6a027b8d0a04e89f77eae74308655d82936fa8f492a75238ee5b665b4cc5a49598db3f3119808ca9403bb62d32b4da8d1cfd981a8e7f43001571d178bd516
 DIST crossfire-1.71.0.tar.bz2 6712638 SHA256 cc1917db207628c34d2222f1b6c416481f72f185ac3bc9e49b9a53db94fe1e1d SHA512 d867f3393cb18ed78158c9a724d386dd642f0193ace86fef592e7bdc80885b7f7ce3c37be34b77d73b31c939d41e533029f2e7dea405c00d7a67aa3baebd146d WHIRLPOOL 484d57f2d7f0138b35e3eb4c2fc08a2e462de6ddccde3b413bd141161bc1239283a966a2a3ebeeabef56b311e90d9cd86cba4a322e6152d930fa7d9a5ceb4267
 EBUILD crossfire-server-1.70.0.ebuild 1035 SHA256 caee3d244c38cc500cb7e155113da26a8a9be17cf155b1f0b2fe020dd76c0ff8 SHA512 ae6991af27a42dd7334cbb35e2f4de4e9561a0150a836d27b3bc268388f5b216d0ac5430bff259402a06863e5f4496ea97f00688141b61a9cd8b99c695a2094f WHIRLPOOL 2de7085cfdc9ea48519e544ee1ab76d39a5001ebbe4344c8abeb75ee70278ca837a433a9ef1d50af33b04ad8934ee0acbc5afe365585dcef5ed4440435c1afd0
-EBUILD crossfire-server-1.71.0.ebuild 1162 SHA256 2446e9f9c92f7e72f70ecf098498a069be774f421caf9ad929d8620a65cb842e SHA512 db8ee1a3a4d684b9ecd2a21b1f377f7e9c1e8b7d66c8401bf770f7f0b7da60cffdcd39b8edfe0896425009f874b99973daac4ce9372773fbd9bbbf0d34af0b3b WHIRLPOOL a826ff4a8bf7b3000a26c3f69b371a1a4a256126982e166b575b80f1eb345992d3eceeab230cc08fdb1ee8d9bdb958c1aa11431fa59574a45c8331fd660a3a3c
-MISC ChangeLog 4748 SHA256 958671f1f074efaa113f560bb93edaeca92f1bb0082e5362544566c20e216a2f SHA512 098953289b2b76a617f54da38f4e1005903e4c1bb9df6e6d342054b23443592a978fb702693804eccfdba005e3f484fd6795a84401307212bb0e05324b354a0c WHIRLPOOL 30dbc53a3bd95c16e23c76229bb20a4ec511937bacfce7483920ed0b36a5f7eaed2e3596b358922a70d66a9563260c2a31f2c0735595f912cc713aad6ae44444
+EBUILD crossfire-server-1.71.0.ebuild 1243 SHA256 f4c881aa112b30bdeff9f5727a0c13f091fffea8c8ba6c10c870664fed49e222 SHA512 7a3434af94d01323b5bf5a81ac26dd1aeed8ccc02f600a607d4ac6a81a38a4d7b82ac0d96455ed6fb249742aa412174118b1551f24e5369e587b3949caf69a3a WHIRLPOOL 68e5bfff0c971e71c39d25ff23ce78b30ba42139b491b16b50923771e15ea75db1496fa340c52b012526120157f48dccc97b2269c8b5e509afb984eb207266ff
+MISC ChangeLog 4882 SHA256 9242dbf52a2611f786a41d09e5644709671b0f2b5345c0067b41d081801fb87d SHA512 f3f3e2117465cd1ca5958a27835a626f518427e4065cb8cb761e8d6c2c13a9fe710a8e11a9084ded749d83d24cb786fb615c48abeca8d718359efe9f1900e7fe WHIRLPOOL 69fd1baed7263a3d4b67000601f25023ecfa15fabb20df748dc130217762b16b56a77e19a43df8f2fafce23aba3161f0b723cefd99ac090edf6c0af3fd6f5948
 MISC metadata.xml 158 SHA256 1423a4fdd4a79b1728a2056d9e300f7e1074253095d82726218d9e9b953888a3 SHA512 d954564236b67b6ab97846b73f74e715e8f1bec2dba6595e9a5046c2e8c3b93f4879c293f9d1d02d99a533bee56156dae3f31a485697128c51af14cdbfdada8a WHIRLPOOL d03e7293d09d794d61c095a423f945b3644355a247f270a73ca8d30b4dfe9c98244297536bfd1a4bd6c14794aa1152eca20fd83bfdf3e1e74d4f676152d35ada
