@@ -11,4 +11,4 @@ RESTRICT=test
 SLOT=0
 SRC_URI=mirror://sourceforge/crossfire/crossfire-server/1.71.0/crossfire-1.71.0.tar.bz2 mirror://sourceforge/crossfire/crossfire-server/1.71.0/crossfire-1.71.0.maps.tar.bz2 mirror://sourceforge/crossfire/crossfire-server/1.71.0/crossfire-1.71.0.arch.tar.bz2
 _eclasses_=base	87f7447ccfc06fd0729ff4684e11e0d6	eutils	998e5931fb95b10a6a11ec796ada2759	games	bc8839608d26ccd57ca4f2f01c67460f	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	0dfbfa13f57c6184f4728d12ac002aac	user	f54e098dd38ba1c0847a13e685b87747
-_md5_=1fd310b94b8c692db02acaa507ed4a2d
+_md5_=0f70e693a50658420f8dee79aa17398e
